# prettiest

./: .gitignore  .travis.yml  Blog.hs  Blog2.lhs  Blog5.hs  Blog5b.hs  Blog6.hs  Hughes.hs  Insane.hs  LP.hs  Makefile  Notes.org  PM.hs  Paper.hs  Paper.lhs  Pareto2.hs  Prettiest.org  README.md  acmart.cls  blog.md  blog.org  default.nix  pretty-compact.cabal  stack.yaml  styx.yaml
Text/: PrettyPrint.hs
Text/PrettyPrint/: Compact.hs
Text/PrettyPrint/Compact/: Core.hs
bench/: Benchmark.hs
paper/: 4k.json  BenchmarkLibs.hs  BenchmarkXML.hs  Benchmarks.hs  ICFP-Mandatory-revisions.txt  ICFP2017-draft-reviews.txt  ICFP2017-reply.txt  PM.hs  Paper.hs  blog.md  prettiest.cabal  pretty-paper.cabal
paper/benchdata/: 1k.json  cds.xml  cdsb10k.xml
paper/lib/: PM.hs
talk/: Outline.org
