name: pretty-compact
version: 2.1
synopsis: Pretty-printing library
description:
  This package contains a pretty-printing library, a set of API's
  that provides a way to easily print out text in a consistent
  format of your choosing. This is useful for compilers and related
  tools.
  .
  This library produces more compact outputs than both
  Wadler-Leijen or Hughes-PJ algorithms, at the expense of computational ressources.
  The core API is based on Hughes-PJ, but some combinators of the Leijen API are implemented as well.
license: GPL
license-file: LICENSE
category: Text
maintainer: Jean-Philippe Bernardy <jeanphilippe.bernardy@gmail.com>
build-type: Simple
Cabal-Version: >= 1.8
tested-with:
  GHC == 7.4.2,
  GHC == 7.6.3,
  GHC == 7.8.4,
  GHC == 7.10.3,
  GHC == 8.0.2,
  GHC == 8.2.1

source-repository head
                  type: git
                  location: http://github.com/jyp/prettiest.git


Library
  exposed-modules:
    Text.PrettyPrint.Compact
    Text.PrettyPrint.Compact.Core
  build-depends:
    base >= 3 && < 5,
    base-compat >= 0.9.3 && <0.10,
    containers

  if !impl(ghc >= 8.0)
    build-depends: semigroups

benchmark pretty-comparison
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Benchmark.hs
  build-depends:
    aeson,
    base,
    base-compat,
    bytestring,
    criterion,
    deepseq,
    pretty,
    pretty-compact,
    text,
    unordered-containers,
    wl-pprint
