Cabal-Version: 3.4
name: pretty-compact
version: 3.1
synopsis: Pretty-printing library
description:
  This package contains a pretty-printing library, a set of API's
  that provides a way to easily print out text in a consistent
  format of your choosing. This is useful for compilers and related
  tools.
  .
  This library produces more compact outputs than both
  Wadler-Leijen or Hughes-PJ algorithms, at the expense of computational ressources.
  The core API is based on Hughes-PJ, but some combinators of the Leijen API are implemented as well.
license: LGPL-3.0-only
license-file: LICENSE
category: Text
maintainer: Jean-Philippe Bernardy <jeanphilippe.bernardy@gmail.com>
build-type: Simple

source-repository head
                  type: git
                  location: http://github.com/jyp/prettiest.git


Library
  exposed-modules:
    Text.PrettyPrint.Compact
    Text.PrettyPrint.Compact.Core
  build-depends:
    base >= 4.6 && < 5,
    base-compat >= 0.9.3 && <666,
    containers >= 0 && <666

  if !impl(ghc >= 8.0)
    build-depends: semigroups >= 0 && <666

  other-extensions:
    LambdaCase

benchmark pretty-comparison
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Benchmark.hs
  build-depends:
    aeson,
    base,
    base-compat,
    bytestring,
    criterion,
    deepseq,
    pretty,
    pretty-compact,
    text,
    unordered-containers,
    wl-pprint
