name: pretty-paper
version: 1.0
synopsis: Pretty-printing library
description:
  This package contains a pretty-printing library, a set of API's
  that provides a way to easily print out text in a consistent
  format of your choosing. This is useful for compilers and related
  tools.
  .
  This library produces more compact outputs than both
  Wadler-Leijen or Hughes-PJ algorithms, at the expense of computational ressources.
  The core API is based on Hughes-PJ, but some combinators of the Leijen API are implemented as well.
category: Text
maintainer: Jean-Philippe Bernardy <jeanphilippe.bernardy@gmail.com>
build-type: Simple
Cabal-Version: >= 1.8

Library
  exposed-modules: PM
  build-depends:
     base,
     marxup,
     lens,
     criterion,
     lp-diagrams,
     gasp,
     statistics,
     random
  hs-source-dirs: lib

executable paper
        build-depends:
                     pretty-paper,
                     base,
                     marxup,
                     lens,
                     criterion,
                     lp-diagrams,
                     gasp,
                     statistics,
                     random
        main-is:
           Paper.hs

executable bench
        build-depends:
                     pretty-paper,
                     base,
                     lens,
                     criterion,
                     gasp,
                     statistics,
                     random
        main-is:
           Benchmarks.hs


